# git-stock

./: .gitmodules  CMakeLists.txt  LICENSE  bower.json  driver.js  git-utils.js  git.js  index.js  market.js  models.js  package.json  pipeline.js  plugins.js  serve.js  stock.js
core/: config.js  driver.js  econ.js  git-utils.js  market.js  models.js
extra/elastic/: elastic-push.py  git-stock-mappings.json
include/: CommitTimeline.hh  FileMetrics.hh  GitStockLog.hh  GitStockProgress.hh  JsonReport.hh  LineAgeMetrics.hh  Options.hh  PlainTextReport.hh  Stock.hh  TreeMetrics.hh  util.hh
public/js/graphs/: value-over-time.js
rewards/: commit.js  issue_closed.js
routes/: api.js  index.js
src/: CommitTimeline.cc  FileMetrics.cc  GitStockLog.cc  GitStockProgress.cc  JsonReport.cc  LineAgeMetrics.cc  Options.cc  PlainTextReport.cc  Stock.cc  TreeMetrics.cc  main.cc  util.cc
views/: layout.jade  lifetime.jade
violations/: message.js
